Initial finish Drill of Core & Chainsaw of Stream

--- a/src/main/resources/assets/electrothaumaturgy/lang/en_us.lang
+++ b/src/main/resources/assets/electrothaumaturgy/lang/en_us.lang
@@ -1,3 +1,8 @@
 item.electrothaumaturgy.electric_goggle.name=Electric Goggle
 item.electrothaumaturgy.electric_traveller_boots.name=Electric Boots of Traveller
 item.electrothaumaturgy.electric_scribing_tools.name=Electric Scribing Tools
+
+item.electrothaumaturgy.drill_of_core.name=Drill of Core
+item.electrothaumaturgy.chainsaw_of_stream.name=Chainsaw of Stream
+item.electrothaumaturgy.electric_hoe_of_growth.name=Electric Hoe of Growth
+item.electrothaumaturgy.nanosaber_of_zephyr.name=NanoSaber of Zephyr
