--- a/src/main/resources/assets/electrothaumaturgy/lang/zh_cn.lang
+++ b/src/main/resources/assets/electrothaumaturgy/lang/zh_cn.lang
@@ -4,8 +4,8 @@ item.electrothaumaturgy.electric_goggle.name=电力揭示之护目镜
 item.electrothaumaturgy.electric_traveller_boots.name=电动旅行者之靴
 item.electrothaumaturgy.electric_scribing_tools.name=电子书写工具
 
-item.electrothaumaturgy.drill_of_core.name=炽心电钻
-item.electrothaumaturgy.chainsaw_of_stream.name=奔流电锯
+item.electrothaumaturgy.drill_of_core.name=炽心钻头
+item.electrothaumaturgy.chainsaw_of_stream.name=奔流链锯
 item.electrothaumaturgy.electric_hoe_of_growth.name=电动句芒锄
 item.electrothaumaturgy.nanosaber_of_zephyr.name=风雷纳米剑
 
