--- a/src/main/resources/assets/electrothaumaturgy/lang/zh_cn.lang
+++ b/src/main/resources/assets/electrothaumaturgy/lang/zh_cn.lang
@@ -6,11 +6,11 @@ tile.electrothaumaturgy.potentia_generator.name=Potentia 源质发电机
 
 tile.electrothaumaturgy.paper_mill.name=造纸机
 
-tile.electrothaumaturgy.electrostatic_harmonizer=静电协调器
+tile.electrothaumaturgy.electrostatic_harmonizer.name=静电协调器
 tile.electrothaumaturgy.flux_normalizer.name=咒波净化设备
 tile.electrothaumaturgy.vis_replenisher.name=灵气再生仪
 
-tile.electrothaumaturgy.essentia_coolant_injector=源质反应堆冷却剂注入器
+tile.electrothaumaturgy.essentia_coolant_injector.name=Gelum 源质反应堆冷却剂注入器
 
 item.electrothaumaturgy.electric_goggle.name=电力揭示之护目镜
 item.electrothaumaturgy.electric_traveller_boots.name=电动旅行者之靴
